Resolve code smells