@@ -7,19 +7,22 @@ import org.springframework.stereotype.Component;
 
 import java.time.ZoneOffset;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static java.util.Date.from;
 
 @Component
 public class ApiKeyBoConverter {
 
-    public ResponsePdndDto convertToResponsePdnd(List<ApiPdndDto> apiPdndDtos, List<ApiPdndDto> apiPdndChangedDtos){
+    public ResponsePdndDto convertToResponsePdnd(Collection<ApiPdndDto> apiPdndDtos, List<ApiPdndDto> apiPdndChangedDtos){
         apiPdndDtos.removeIf(apiPdndChangedDtos::contains);
 
         ResponsePdndDto apiKeyResponsePdndDto = new ResponsePdndDto();
         if(!apiPdndDtos.isEmpty()){
-            apiKeyResponsePdndDto.setUnprocessedKey(apiPdndDtos.stream().map(ApiPdndDto::getId).toList());
+            List<String> unprocessedKey = apiPdndDtos.stream().map(ApiPdndDto::getId).collect(Collectors.toList());
+            apiKeyResponsePdndDto.setUnprocessedKey(unprocessedKey);
         }
 
         return apiKeyResponsePdndDto;
